--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -14,6 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:mcv_selectionColor="#a9dbf0cb"
-        app:mcv_showOtherDates="defaults" />
+        app:mcv_showOtherDates="defaults"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listOfSchedule"
+        android:orientation="vertical">
+
+    </LinearLayout>
 
 </LinearLayout>
