--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     android:orientation="vertical"
     android:gravity="center_vertical">
 
@@ -12,8 +11,9 @@
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:mcv_selectionColor="#a9dbf0cb"
-        app:mcv_showOtherDates="defaults"/>
+        app:mcv_selectionColor="#fc9a96"
+        app:mcv_showOtherDates="defaults"
+        android:background="#9999"/>
 
     <LinearLayout
         android:layout_width="match_parent"
