--- a/app/src/main/res/layout/show_listofschedule.xml
+++ b/app/src/main/res/layout/show_listofschedule.xml
@@ -3,16 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#ffffff">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:id="@+id/ScheduleManageLabel">
 
         <TextView
-            android:id="@+id/texttoday"
+            android:id="@+id/todaySchedule"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -27,7 +29,7 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/list1"
+            android:id="@+id/scheduleList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
@@ -40,7 +42,7 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/btnadd"
+            android:id="@+id/btnScheduleAdd"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="일정 추가" />
