--- a/app/src/main/res/layout/manage_schedule.xml
+++ b/app/src/main/res/layout/manage_schedule.xml
@@ -45,7 +45,8 @@
             android:id="@+id/timePicker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:timePickerMode="spinner"/>
+            android:timePickerMode="spinner"
+            android:layout_gravity="center"/>
 
         <TextView
             android:layout_width="fill_parent"
