--- a/app/src/main/res/drawable/more.xml
+++ b/app/src/main/res/drawable/more.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval" android:padding="5dp">
-<!--    <corners-->
-<!--        android:bottomRightRadius="6dp"-->
-<!--        android:bottomLeftRadius="6dp"-->
-<!--        android:topLeftRadius="6dp"-->
-<!--        android:topRightRadius="6dp" />-->
-    <stroke
-
-        android:width="2px"
-        android:color="#888" />
+    <solid
+        android:color="#A7C6FF"/>
 
 </shape>
