--- a/app/src/main/res/layout/show_listofschedule.xml
+++ b/app/src/main/res/layout/show_listofschedule.xml
@@ -9,7 +9,7 @@
     android:layout_marginLeft="18.3dp"
     android:layout_marginRight="18.7dp"
     android:layout_marginTop="11dp"
-    app:cardCornerRadius = "10dp"
+    app:cardCornerRadius="10dp"
     android:layout_margin="10dp"
     android:layout_gravity="center">
 
@@ -25,13 +25,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="일정 관리" />
+            android:textSize="30dp"
+            android:textColor="#000000"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:text="dsf"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <ListView
                 android:id="@+id/scheduleList"
@@ -43,9 +47,15 @@
 
         <Button
             android:id="@+id/btnScheduleAdd"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="일정 추가" />
+            android:layout_gravity="right"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="+"
+            android:textColor="#ffffff"
+            android:textSize="25dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/add_button"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
